update general check